modified the html and js files for matrixLED - initial modifications

--- a/hw04/ServerLED/matrixLED.html
+++ b/hw04/ServerLED/matrixLED.html
@@ -12,6 +12,7 @@
   </head>
   <body>
   <b>Matrix LED Demo</b>
+  <b>edited by Josh Woods</b>
         <img src="images/RoseLogo96.png" id="RoseLogo"></a>
 <p/>
     <button id="connect" onClick='connect()'/>Connect</button>
@@ -19,6 +20,9 @@
     <span id="addresses">
     i2c: <input id="i2cNum" type="text" value="">
     </span>
+    <button id="makeRed" onClick='makeRed()'/>Make Red</button>
+    <button id="makeGreen" onClick='makeGreen()'>Make Green</button>
+    <button id="clear" onClick='clear()'>Clear</button>
 <p/>
 <p/>
 <div id="update">
