fixed the clearing of stuff

--- a/hw04/ServerLED/matrixLED.html
+++ b/hw04/ServerLED/matrixLED.html
@@ -22,7 +22,7 @@
     </span>
     <button id="makeRed" onClick='makeRed()'/>Make Red</button>
     <button id="makeGreen" onClick='makeGreen()'>Make Green</button>
-    <button id="clear" onClick='clear()'>Clear</button>
+    <button id="clearMe" onClick='clearMe()'>Clear</button>
 <p/>
 <p/>
 <div id="update">
